--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav>
         <div class="menu-bar">
             <i class="fa-solid fa-bars"></i>
-            <ul>
-                <li>Home</li>
-                <li>Products</li>
-                <li>Sign up</li>
-                <li>Log in</li>
-            </ul>
+            <div class="menu-option">
+                <a href="#">Home</a>
+                <a href="#">Products</a>
+                <a href="#">Sign up</a>
+                <a href="#">Log In</a>
+            </div>
         </div>
         <div class="left">Influencer products</div>
         <div class="right">
