--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="menu-bar">
             <i class="fa-solid fa-bars"></i>
             <div class="menu-option">
-                <a href="#">Home</a>
+                <a href="https://www.youtube.com/">Home</a>
                 <a href="#">Products</a>
                 <a href="#">Sign up</a>
                 <a href="#">Log In</a>
@@ -33,5 +33,19 @@
             <div class="nav-box"><i class="fa-solid fa-cart-shopping"></i></div>
         </div>
     </nav>
+    <!-- header  -->
+    <header>
+        <div class="header-container">
+            <div class="header-description">
+                <h1>Start your Journey as <br>
+                    Influencer</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+                <button><p>Preebook now <i class="fa-solid fa-arrow-right"></i></p></button>
+            </div>
+            <img class="header-img" src="images/main-camera.png" alt="">
+        </div>
+        
+        
+    </header>
 </body>
 </html>
